[package]
name = "unbounded-udp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2.123"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.35.0", features = ["Win32_Networking_WinSock"] }
